--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ section{
     top: 0;
     left: 0;
     width: 100%;
-    padding: 2rem 9%;
+    padding: 1rem 9%;
     background: var(--bg-color);
     display: flex;
     justify-content: space-between;
@@ -226,9 +226,10 @@ span{
     font-size: 4.5rem;
 }
 
-/* .cv{
+.cv{
+    margin-top: 1rem;
     padding: .5rem 2rem;
-} */
+}
 
 .about-content h2{
     text-align: left;
@@ -240,8 +241,8 @@ span{
 }
 
 .about-content p{
-    font-size: 1.5rem;
-    margin: 2rem 0 1.5rem;
+    font-size: 1.4rem;
+    margin: .7rem;
 }
 
 .skills-title h2{
@@ -290,7 +291,6 @@ span{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 90%;
 }
 
 .certificates-box img{
@@ -301,12 +301,8 @@ span{
     width: 80%;
 }
 
-.certificates-box h1{
+.certificates-box h2{
     text-decoration: underline;
-    font-size: 1.2rem;
-}
-
-.certificates-box h1{
     padding: .5rem 0 0 0;
 }
 
@@ -408,7 +404,7 @@ span{
     gap: 2.5rem;
 }
 
-.portfolio-container .portfolio-box{
+.portfolio-box{
     position: relative;
     border-radius: 2rem;
     box-shadow: 0 0 1rem var(--bg-color);
@@ -425,20 +421,21 @@ span{
     transform: scale(1.1);
 }
 
-.portfolio-box .portfolio-layer{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, .6), var(--main-color));
+.portfolio-layer{
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    /* width: 100%; */
+    height: 100%;
+    /* background: linear-gradient(rgba(0, 0, 0, .6), var(--main-color)); */
+    background: darkblue;
     flex-direction: column;
     text-align: center;
-    padding: 0 4rem;
-    transform: translateY(100%);
+    padding: 0 2rem;
+    /* transform: translateY(100%); */
     transition: .5s ease;
 }
 
@@ -446,24 +443,23 @@ span{
     transform: translateY(0);
 }
 
-.portfolio-layer h4{
-    font-size: 3rem;
+.portfolio-layer h1{
     text-shadow: 1px 1px 2px black;
+    padding: .5rem;
 }
 
 .portfolio-layer p{
     font-weight: 700;
-    font-size: 1.6rem;
-    margin: .3rem 0 1rem;
+    font-size: 1.3rem;
     text-shadow: 1px 1px 2px black;
+    padding: .5rem;
 }
 
 .portfolio-layer a{
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 5rem;
-    height: 5rem;
+    padding: .5rem;
     background: var(--text-color);
     border-radius: 50%;
     margin: 0 1rem;
@@ -482,29 +478,21 @@ span{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 80%;
-    margin-top: 3rem;
-    position: absolute;
-    bottom: 2rem;
 }
 
 .tech-item{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 3.5rem;
-    width: 12rem;
-    border-radius: 1rem;
+    /* border-radius: 1rem; */
     background: var(--second-bg-color);
+    /* padding: .7rem; */
+    /* margin: 10px; */
+
 }
 
 .tech-item img{
     width: 18%;
-    margin-right: 1rem;
-}
-
-.tech-item:nth-child(3) img{
-    width: 14%;
     margin-right: 1rem;
 }
 
@@ -513,8 +501,6 @@ span{
     font-size: 1.2rem;
     text-shadow: 1px 1px 2px black;
 }
-
-
 
 /* Contact Section Styles */
 
