--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ section{
     }
 }
 
-.flags-container{
+.flags{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -91,10 +91,15 @@ section{
 
 .flags-container img{
     display: block;
+    cursor: pointer;
     width: 30px;
 }
-/* ¿? */
-.navbar .flags-container:nth-child(6){
+
+.gray{
+    filter: grayscale(100%);
+}
+
+.navbar .flags-container:nth-child(2){
     margin-left: 1rem;
 }
 
@@ -226,6 +231,10 @@ span{
     font-size: 4.5rem;
 }
 
+.h-translate{
+    display: inline;
+}
+
 .cv{
     margin-top: 1rem;
     padding: .5rem 2rem;
@@ -234,6 +243,11 @@ span{
 .about-content h2{
     text-align: left;
     line-height: 1.2;
+}
+
+.about-content span{
+    font-size: 4.5rem;
+    font-weight: bolder;
 }
 
 .about-content h3{
@@ -328,7 +342,7 @@ span{
 
 /* Services Section Styles */
 
-.services{
+/* .services{
     user-select: none;
 }
 
@@ -384,7 +398,7 @@ span{
 .services-box p{
     font-size: 1.6rem;
     margin: 1rem 0 3rem;
-}
+} */
 
 /* Portfolio Section Styles */
 
@@ -393,8 +407,18 @@ span{
     user-select: none;
 }
 
-.portfolio h2{
+.title-container{
+    text-align: center;
     margin-bottom: 4rem;
+}
+
+.title-container h2{
+    display: inline-flex;
+}
+
+.title-container span{
+    font-size: 4.5rem;
+    font-weight: 700;
 }
 
 .portfolio-container{
@@ -423,15 +447,14 @@ span{
 
 .portfolio-layer{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     position: absolute;
     bottom: 0;
     left: 0;
-    /* width: 100%; */
+    width: 100%;
     height: 100%;
-    /* background: linear-gradient(rgba(0, 0, 0, .6), var(--main-color)); */
-    background: darkblue;
+    background: linear-gradient(rgba(0, 0, 0, .6), var(--main-color));
     flex-direction: column;
     text-align: center;
     padding: 0 2rem;
@@ -444,13 +467,14 @@ span{
 }
 
 .portfolio-layer h1{
+    font-size: 2.4rem;
     text-shadow: 1px 1px 2px black;
     padding: .5rem;
 }
 
 .portfolio-layer p{
     font-weight: 700;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     text-shadow: 1px 1px 2px black;
     padding: .5rem;
 }
@@ -459,10 +483,16 @@ span{
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    padding: .5rem;
+    padding: 1rem;
     background: var(--text-color);
     border-radius: 50%;
     margin: 0 1rem;
+}
+
+.portfolio-layer a:hover{
+    background: rgb(184, 184, 184);
+    transform: scale(1.1);
+    transition: .5s all;
 }
 
 .portfolio-layer a i{
@@ -481,18 +511,18 @@ span{
 }
 
 .tech-item{
-    display: flex;
+    display: inherit;
     align-items: center;
     justify-content: center;
-    /* border-radius: 1rem; */
+    border-radius: 1rem;
     background: var(--second-bg-color);
-    /* padding: .7rem; */
-    /* margin: 10px; */
-
+    padding: .4rem 1rem;
+    margin: 0 10px;
 }
 
 .tech-item img{
-    width: 18%;
+    display: block;
+    width: 20px;
     margin-right: 1rem;
 }
 
@@ -503,6 +533,10 @@ span{
 }
 
 /* Contact Section Styles */
+
+.contact{
+    user-select: none;
+}
 
 .contact h2{
     margin-bottom: 3rem;
