--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,8 @@ span{
 }
 
 .about-img img{
-    width: 35vw;
+    width: 25vw;
+    margin-right: 7rem;
 }
 
 .heading{
@@ -741,6 +742,10 @@ span{
     .footer{
         padding: 2rem 3%;
     }
+
+    .about img{
+        margin-right: 0;
+    }
 }
 
 @media (max-width: 768px){
@@ -792,8 +797,9 @@ span{
     }
 
     .about-img img{
-        width: 50vw;
+        width: 40vw;
         margin-top: 4rem;
+        margin-right: 0;
     }
 
     .services h2{
@@ -819,6 +825,15 @@ span{
         grid-template-columns: 1fr;
     }
 
+    .about-img img{
+        width: 50vw;
+        margin: 0;
+    }
+
+    .footer{
+        justify-content: center;
+    }
+
 }
 
 @media (max-width: 450px){
@@ -841,8 +856,9 @@ span{
         width: 12%;
     }
 
-    .footer{
-        justify-content: center;
+    .about-img img{
+        width: 50vw;
+        margin: 0;
     }
 
 }
@@ -891,7 +907,8 @@ span{
     }
 
     .about-img img{
-        width: 90vw;
+        margin-top: 0;
+        width: 60vw;
     }
 
     .footer{
