--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,11 @@ span{
 }
 
 .about-img img{
-    width: 25vw;
+    width: 20vw;
+    filter: drop-shadow(-4px 7px 5px #787878);
+    /* filter: drop-shadow(0px 0px 11px #787878); */
+    filter: drop-shadow(0px 0px 26px #787878);
+
     margin-right: 7rem;
 }
 
@@ -900,10 +904,6 @@ span{
 
     .tech-item{
         margin: 0;
-    }
-
-    .home-img img{
-        width: 90vw;
     }
 
     .about-img img{
