--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
 }
 
 html{
-    font-size: 62.5%;
+    font-size: clamp(70%, 62.5% + 1vw, 75%);
     width: 100vw;
     overflow-x: hidden;
 }
@@ -126,9 +126,6 @@ section{
     background-image: url();
 }
 
-
-
-
 .img-cont{
     display: flex;
     justify-content: end;
@@ -140,10 +137,6 @@ section{
     width: clamp(60%, 50% + .50vw, 60%);
     opacity: .4;
 }
-
-
-
-
 
 .home-content h3{
     font-size: 3.2rem;
@@ -240,9 +233,7 @@ span{
 .about-img img{
     width: 20vw;
     filter: drop-shadow(-4px 7px 5px #787878);
-    /* filter: drop-shadow(0px 0px 11px #787878); */
     filter: drop-shadow(0px 0px 26px #787878);
-
     margin-right: 7rem;
 }
 
@@ -494,7 +485,8 @@ span{
 
 .portfolio-layer p{
     font-weight: 700;
-    font-size: 1.5rem;
+    font-size: clamp(1rem, .8rem + .3vw, 1.5rem);
+    /* font-size: 1.2rem; */
     text-shadow: 1px 1px 2px black;
     padding: .5rem;
 }
@@ -684,8 +676,6 @@ span{
 .hidden{
     display: none;
 }
-
-/* Breakpoints */
 
 @media (max-width: 1485px){
 
