--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
 }
 
 html{
-    font-size: clamp(70%, 62.5% + 1vw, 75%);
+    font-size: clamp(40%, 50% + .1vw, 75%);
     width: 100vw;
     overflow-x: hidden;
 }
@@ -141,7 +141,7 @@ section{
     align-items: center;
 }
 
-.imagen-prueba{
+.hero{
     position: absolute;
     width: clamp(60%, 50% + .50vw, 60%);
     opacity: .4;
@@ -330,10 +330,13 @@ span{
 
 
 
+
+
+
 .scroll-down {
   height: 70px;
   width: 40px;
-  border: 3px solid rgb(58, 65, 255);
+  border: 3px solid rgb(89, 95, 255);
   position: absolute;
   left: 50%;
   bottom: 20px;
@@ -376,7 +379,6 @@ span{
     opacity: 0;
   }
 }
-
 
 
 
