--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,12 @@ section{
     font-weight: 700;
 }
 
+/* PODRIA VOLAR */
+
+.home-content{
+    width: 100%;
+}
+
 .home-content h3:nth-of-type(2){
     margin-bottom: 2rem;
 }
