--- a/css/style.css
+++ b/css/style.css
@@ -29,13 +29,26 @@ body{
     background: linear-gradient(135deg, var(--bg-color), var(--second-bg-color));
     color: var(--text-color);
     overflow-x: hidden;
-    cursor: url('/images/cursor.png'), auto;
 }
 
 section{
     min-height: 100vh;
     background:transparent;
     padding: 10rem 9% 2rem;
+}
+
+/* EFECTO BRIGHT MOUSE */
+
+#cursor-halo {
+  position: fixed;
+  width: 1200px;
+  height: 1200px;
+  border-radius: 50%;
+  pointer-events: none; /* que no interfiera con clics */
+  background: radial-gradient(circle, rgba(0, 50, 215, 0.205) 0%, transparent 50%);
+  transform: translate(-50%, -50%);
+  transition: transform 0.1s ease-out; /* suavizado opcional */
+  mix-blend-mode: difference; /* opcional para efecto distinto */
 }
 
 .header{
@@ -149,7 +162,7 @@ section{
 }
 
 .home-content h3{
-    font-size: 3.2rem;
+    font-size: 4rem;
     font-weight: 700;
 }
 
@@ -159,18 +172,35 @@ section{
     width: 100%;
 }
 
-.home-content h3:nth-of-type(2){
+/* .home-content h3:nth-of-type(2){
     margin-bottom: 2rem;
-}
+} */
 
 span{
     color: var(--main-color);
 }
 
 .home-content h1{
-    font-size: 5.6rem;
+    font-size: 7rem;
     font-weight: 700;
     line-height: 1.3;
+}
+
+.blur-in {
+  filter: blur(10px);
+  opacity: 0;
+  animation: blurIn 2.5s ease forwards;
+}
+
+@keyframes blurIn {
+  0% {
+    filter: blur(10px);
+    opacity: 0;
+  }
+  100% {
+    filter: blur(0);
+    opacity: 1;
+  }
 }
 
 .home-content p{
