--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&family=Tinos:ital@1&display=swap');
 
 * {
     margin: 0;
@@ -8,7 +9,7 @@
     border: none;
     outline: none;
     scroll-behavior: smooth;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Source Code Pro', sans-serif;
 }
 
 :root{
@@ -25,10 +26,11 @@ html{
 }
 
 body{
-    /* background: var(--bg-color); */
     background: linear-gradient(135deg, var(--bg-color), var(--second-bg-color));
     color: var(--text-color);
     overflow-x: hidden;
+    background-color: #0a192f;
+    background-image: url("data:image/svg+xml;utf8,\<svg xmlns='http://www.w3.org/2000/svg' width='120' height='120'>\<rect width='120' height='120' fill='none' stroke='rgba(255,255,255,0.05)' stroke-width='1'/>\</svg>");
 }
 
 section{
@@ -58,7 +60,8 @@ section{
     left: 0;
     width: 100%;
     padding: 1rem 9%;
-    background: var(--bg-color);
+    /* background: var(--bg-color); */
+    background: transparent;
     justify-content: space-between;
     align-items: center;
     z-index: 999;
