--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,6 @@ section{
     left: 0;
     width: 100%;
     padding: 1rem 9%;
-    /* background: var(--bg-color); */
     background: transparent;
     justify-content: space-between;
     align-items: center;
@@ -89,7 +88,10 @@ section{
 }
 
 .header.sticky{
-    border-bottom: .1rem solid rgba(0, 0, 0, .2);
+    background-color: #1f242d44;
+    backdrop-filter: blur(120px);
+    border-bottom: .15em solid rgba(0, 238, 255, 0.342);
+    transition: backdrop-filter 1s ease;
 }
 
 .navbar{
@@ -107,9 +109,9 @@ section{
 }
 
 .navbar a{
-    font-size: clamp(1.1rem, .7vw + .1rem, 1.5rem);
+    font-size: clamp(1.1rem, 1.037rem + 0.29vw, 1.5rem);
     color: var(--text-color);
-    margin-left: 4rem;
+    margin-left: clamp(1rem, 0.286rem + 1.705vw, 2rem);
 }
 
 .navbar a:hover,
@@ -119,11 +121,11 @@ section{
 }
 
 .logo{
-    font-size: clamp(1.3rem, 1vw + .7rem, 2.5rem);
+    font-size: clamp(1.3rem, 1.11rem + 0.869vw, 2.5rem);
     color: var(--text-color);
     font-weight: 600;
     cursor: default;
-    animation: slideLogo .5s ease forwards;
+    animation: slideLogo .7s ease forwards;
 }
 
 @keyframes slideLogo{
@@ -185,7 +187,7 @@ section{
 }
 
 .home-content h3{
-    font-size: clamp(1.8rem, 2vw + .7rem, 2.7rem);
+    font-size: clamp(1.8rem, 1.657rem + 0.652vw, 2.7rem);
     font-weight: 700;
 }
 
@@ -198,7 +200,7 @@ span{
 }
 
 .home-content h1{
-    font-size: clamp(2.65rem, 4vw + 1rem, 6rem);
+    font-size: clamp(2.65rem, 2.119rem + 2.425vw, 6rem);
     font-weight: 700;
     line-height: 1.3;
 }
@@ -229,7 +231,7 @@ span{
     background: transparent;
     border: 2px solid var(--main-color);
     border-radius: 50%;
-    font-size: clamp(.5rem, 3vw + 1rem, 2rem);
+    font-size: clamp(0.5rem, 0.262rem + 1.086vw, 2rem);
     color: var(--main-color);
     margin: 3rem 1.5rem 3rem 0;
     transition: .5s ease;
@@ -247,7 +249,7 @@ span{
     background: var(--main-color);
     border-radius: 4rem;
     box-shadow: 0 0 2rem var(--main-color);
-    font-size: 1.6rem;
+    font-size: clamp(1rem, 0.643rem + 0.952vw, 1.5rem);
     font-weight: 600;
     color: var(--second-bg-color);
     letter-spacing: .1rem;
@@ -285,7 +287,6 @@ span{
     justify-content: center;
     align-items: center;
     user-select: none;
-    /* background: var(--second-bg-color); */
     padding-top: 5rem;
 }
 
@@ -298,7 +299,7 @@ span{
 
 .heading{
     text-align: center;
-    font-size: 4.5rem;
+    font-size: clamp(2.5rem, 1.071rem + 3.81vw, 4.5rem);
 }
 
 .h-translate{
@@ -306,7 +307,7 @@ span{
 }
 
 .cv{
-    margin-top: 1rem;
+    margin-top: 1.2em;
     padding: .8rem 2rem;
 }
 
@@ -315,23 +316,19 @@ span{
 }
 
 .about-content span{
-    font-size: 4.5rem;
+    font-size: clamp(2.5rem, 1.071rem + 3.81vw, 4.5rem);
     font-weight: bolder;
 }
 
-.about-content h3{
-    font-size: 2.6rem;
-}
-
 .about-content p{
-    font-size: 1.4rem;
+    font-size: clamp(1rem, 0.643rem + 0.952vw, 1.35rem);
     margin: .7rem;
 }
 
 .skills-title h2{
     padding-bottom: 1rem;
     margin: 3rem 0;
-    font-size: 2rem;
+    font-size: clamp(1.2rem, 0.5rem + 1.333vw, 1.7rem);
     border-bottom: 1px solid var(--main-color);
 }
 
@@ -799,16 +796,12 @@ span{
 
 @media (max-width: 1200px){
 
-    .about-content p{
-        font-size: 1.5rem;
-    }
-
     .tech{
         width: 8%;
     }
 
     .header{
-        height: 10em;
+        /* height: 10em; */
         width: 100vw;
     }
 
@@ -978,8 +971,7 @@ span{
     .navbar{
         top: -103vh;
     }
-
-
+    
 }
 
 @media (max-width: 375px){
