--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,6 @@ body{
   background-size: 120px 120px;
 }
 
-
 ::-webkit-scrollbar {
     width: 12px;       /* ancho (vertical) */
 }
@@ -101,6 +100,7 @@ section{
     background-color: #1f242d44;
     backdrop-filter: blur(120px);
     border-bottom: .15em solid rgba(0, 238, 255, 0.342);
+    -webkit-backdrop-filter: blur(120px);
     transition: backdrop-filter 1s ease;
 }
 
@@ -196,40 +196,25 @@ section{
     z-index: -1;
 }
 
-.home-content h3{
-    font-size: clamp(1.8rem, 1.657rem + 0.652vw, 2.7rem);
-    font-weight: 700;
-}
-
 .home-content{
+    display: flex;
+    flex-direction: column;
     width: 100%;
 }
 
-span{
-    color: var(--main-color);
-}
-
 .home-content h1{
-    font-size: clamp(2.65rem, 2.119rem + 2.425vw, 6rem);
+    font-size: clamp(2.5rem, 2rem + 2.25vw, 6rem);
     font-weight: 700;
     line-height: 1.3;
 }
 
-.blur-in {
-  filter: blur(10px);
-  opacity: 0;
-  animation: blurIn 2.5s ease forwards;
+.home-content h3{
+    font-size: clamp(1.8rem, 1.457rem + 0.652vw, 2.7rem);
+    font-weight: 700;
 }
 
-@keyframes blurIn {
-  0% {
-    filter: blur(10px);
-    opacity: 0;
-  }
-  100% {
-    filter: blur(0);
-    opacity: 1;
-  }
+.social-media{
+    display: flex;
 }
 
 .social-media a{
@@ -251,6 +236,27 @@ span{
     background: var(--main-color);
     color: var(--second-bg-color);
     box-shadow: 0 0 1rem var(--main-color);
+}
+
+span{
+    color: var(--main-color);
+}
+
+.blur-in {
+  filter: blur(10px);
+  opacity: 0;
+  animation: blurIn 2.5s ease forwards;
+}
+
+@keyframes blurIn {
+  0% {
+    filter: blur(10px);
+    opacity: 0;
+  }
+  100% {
+    filter: blur(0);
+    opacity: 1;
+  }
 }
 
 .btn{
@@ -307,14 +313,11 @@ span{
     margin-right: 7rem;
 }
 
-.heading{
+.heading, .about-content span, .title-container span, .title-container span, .heading-contact{
     text-align: center;
-    font-size: clamp(2.5rem, 2.183rem + 1.448vw, 4.5rem);
+    font-size: clamp(2.5rem, 2rem + 1.248vw, 4.5rem);
+    font-weight: bolder;
 }
-
-
-/* ACA TENGO QUE SEGUIR */
-
 
 .h-translate{
     display: inline;
@@ -327,11 +330,6 @@ span{
 
 .about-content h2{
     line-height: 1.2;
-}
-
-.about-content span{
-    font-size: clamp(2.5rem, 2.183rem + 1.448vw, 4.5rem);
-    font-weight: bolder;
 }
 
 .about-content p{
@@ -546,16 +544,6 @@ span{
     margin-bottom: 4rem;
 }
 
-.title-container h2{
-    font-size: clamp(1.5rem, 1.183rem + 1.448vw, 3.5rem);
-    display: inline-flex;
-}
-
-.title-container span{
-    font-size: clamp(1.5rem, 1.183rem + 1.448vw, 3.5rem);
-    font-weight: 700;
-}
-
 .portfolio-container{
     display: grid;
     grid-template-columns: repeat(3,1fr);
@@ -634,7 +622,6 @@ span{
     font-size: 1.5rem;
     color: var(--second-bg-color);
 }
-/* SEGUIR ACA SI SIS I */
 
 .techs-used-container{
     display: flex;
@@ -670,21 +657,13 @@ span{
     display: flex;
     flex-direction: column;
     user-select: none;
-    /* background: var(--second-bg-color); */
 }
 
 .title-contact-container{
     display: flex;
-    position: relative;
-    margin-bottom: 3rem;
-    height: 8rem;
     align-items: center;
     justify-content: center;
-}
-
-.heading-contact{
-    text-align: center;
-    font-size: clamp(1.5rem, 1.183rem + 1.448vw, 3.5rem);
+    margin-bottom: 1.5em;
 }
 
 #cont-en,
@@ -833,12 +812,9 @@ span{
         padding-bottom: 7rem;
     }
 
-    .portfolio{
-        padding-bottom: 7rem;
-    }
-
     .contact{
         min-height: auto;
+        padding-top: 2em;
     }
 
     .footer{
@@ -848,6 +824,7 @@ span{
     .about img{
         margin-right: 0;
     }
+
 }
 
 @media (max-width: 768px){
@@ -925,9 +902,6 @@ span{
     .portfolio-container{
         grid-template-columns: 1fr;
     }
-    .portfolio-container{
-        width: 80%;
-    }
 
     .img-cont{
         display: none;
@@ -954,12 +928,39 @@ span{
 
 @media (max-width: 450px){
 
+    .portfolio{
+        padding-top: 2em;
+        scroll-margin-top: 8vh;
+    }
+    
+    .portfolio-layer{
+        padding: 0 .5em;
+    }
+
+    .portfolio-container{
+        width: 100%;
+        padding: 0 2%;
+    }
+
+    .contact{
+        scroll-margin-top: 8vh;
+    }
+
+
+    .title-container{
+        margin-bottom: 1em;
+    }
+
+    .certificates-box{
+        padding: 1.2em;
+    }
+
     .certificates-container .certificates-box:nth-child(2),
     .certificates-container .certificates-box:nth-child(3),
     .certificates-container .certificates-box:nth-child(4){
         grid-column-start: 1;
         grid-column-end: 4;
-        width: 70%;
+        width: 85%;
         place-items: center;
         justify-self: center;
     }
@@ -973,17 +974,28 @@ span{
         margin: 0;
     }
 
-    .portfolio-container{
-        width: 400px;
-        padding: 0 2.5em;
+    .skills-title h2{
+        margin: 1.5em 0;
     }
-    
+
+    .home-content{
+        position: relative;
+    }
+
+    .social-media{
+        position: absolute;
+        inset: 0;
+        top: 135px;
+    }
+
 }
 
 @media (max-width: 375px){
 
-    .portfolio-layer{
-        padding: 0 1rem;
+    .certificates-container .certificates-box:nth-child(2),
+    .certificates-container .certificates-box:nth-child(3),
+    .certificates-container .certificates-box:nth-child(4){
+        width: 95%;
     }
 
     .portfolio-layer h1{
@@ -1023,9 +1035,10 @@ span{
         margin-top: 2rem;
     }
 
-    .portfolio-container{
-        width: 325px;
-        padding: 0 .1em;
+    .social-media{
+        position: absolute;
+        inset: 0;
+        top: 175px;
     }
 
 }
